Fix bug with select overlapping option list

--- a/src/style.css
+++ b/src/style.css
@@ -233,6 +233,7 @@ h1 {
   left: 0;
   top: calc(100% + 0.3em);
   display: none;
+  z-index: 100;
 }
 
 .select-options.show {
